--- a/contrib/docker/Dockerfile
+++ b/contrib/docker/Dockerfile
@@ -2,7 +2,7 @@ ARG  BASE=ubuntu:18.04
 FROM $BASE
 ARG  ARCH=x86_64
 RUN apt-get -y update \
-    && apt-get -y install openvswitch-common libpcap0.8 libxml2 \
+    && apt-get -y install openvswitch-common libpcap0.8 libxml2 libvirt0 \
     && rm -rf /var/lib/apt/lists/*
 COPY skydive.$ARCH /usr/bin/skydive
 COPY skydive.yml /etc/skydive.yml
