ci: allow launching a job on a specific node

--- a/scripts/ci/ansible/deploy.yml
+++ b/scripts/ci/ansible/deploy.yml
@@ -60,6 +60,7 @@
         - timestamper
         - jenkins-multijob-plugin
         - envinject
+        - nodelabelparameter
 
 - name: Install requirements
   hosts: jenkins_master, slaves
