--- a/tests/istio/virtualservice-pod.yaml
+++ b/tests/istio/virtualservice-pod.yaml
@@ -10,6 +10,7 @@ spec:
     - destination:
         host: reviews.prod.svc.cluster.local
         subset: v1
+      weight: 40
 ---
 apiVersion: v1
 kind: Pod
